# rust-voip-core

./: .gitignore  Cargo.toml  LICENSE  README.md  gen_token_fix.js  gen_token_viewer.js  package-lock.json  package.json
docs/: known_issues.md  progress.md  tauri_integration_plan.md
src/: audio_service.rs  gpu_color_convert.rs  lib.rs  main.rs  nvfbc_capture.rs  nvfbc_gpu_capture.rs  nvfbc_lowpower.rs  pipewire_capture.rs  video_service.rs
tools/: generate_token.sh  screen_share_test.html
viewer/: index.html
