[package]
name = "neandertal-voip-core"
version = "0.1.0"
edition = "2021"

[dependencies]
livekit = "0.7.28"
cpal = "0.17" # jack feature kaldırıldı
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rubato = "0.16"
ringbuf = "0.4"
nnnoiseless = "0.5"
webrtc-audio-processing = "0.5"
libc = "0.2"
rdev = "0.5"
xcap = "0.8.0"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"

# PipeWire screen capture (high-performance, DMA-BUF, 60+ FPS)
ashpd = "0.12.0"
lamco-portal = "0.3.0"
lamco-pipewire = { version = "0.1.3", features = ["full"] }
