[package]
name = "neandertal-voip-core"
version = "0.1.0"
edition = "2021"

# Cross-platform dependencies
[dependencies]
livekit = "0.7.28"
cpal = "0.17"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rubato = "0.16"
ringbuf = "0.4"
nnnoiseless = "0.5"
rdev = "0.5"
xcap = "0.8.0"

# GStreamer (cross-platform)
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# Audio processing (has complex C++ build on Windows)
webrtc-audio-processing = "0.5"
libc = "0.2"

# PipeWire/Portal screen capture (Wayland, 60+ FPS)
ashpd = "0.12.0"
zbus = "4.4"
lamco-portal = "0.3.0"
lamco-pipewire = { version = "0.1.3", features = ["full"] }

# KMS/DRM capture
drm = "0.14.1"

# NVIDIA Frame Buffer Capture (Linux + Windows)
nvfbc = "0.2.0"

# Windows-only dependencies
[target.'cfg(target_os = "windows")'.dependencies]
# NVFBC works on Windows too
nvfbc = "0.2.0"

# Optional: Windows-specific high-performance capture
# windows-capture = "1.0"  # Uses Windows Graphics Capture API
